# pyro-testing

./: Cargo.toml  flake.nix  runner.sh
.cargo/: config.toml
src/: adc.rs  main.rs
src/adc/: factory_calibrated_values.rs
