[package]
name = "stm_embassy_test"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.4.0", features = [ "defmt", "time", "time-driver-any", "stm32g0b1re", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.2" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0", features = ["print-defmt"] }
heapless = { version = "0.9", default-features = false }
portable-atomic = { version = "1.11", features = ["unsafe-assume-single-core"] }
static_cell = { version = "2.1.1", features = ["nightly"] }

embedded-io-async = { version = "0.6.1" }
derive_more = { version = "2.0.1", features = ["constructor"], default-features = false }
once_cell = { version = "1.21.3", features = ["portable-atomic", "critical-section"], default-features = false }

[profile.release]
debug = 2
